--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		Tel: +86-18810XXXXXX <br />
 		P.R.China <br />
 		<li class="active">
-			<a href="https://chenxu.github.io">HOME</a>
+			<a href="https://cxwx.github.io/chenxu.github.io/">HOME</a>
 		</li>
 
 		<P>
